# habr-career-salaries-scrapper

./: .gitignore  Dockerfile  LICENSE  README.md  benchmark_storage.py  check_supabase_data.py  config.example.yaml  config.json  config.yaml  docker-compose.yml  fix_skills_duplicates.py  fix_skills_transfer.py  main.py  pyproject.toml  pytest.ini  render_env.txt  render_setup.sh  requirements.txt  run_api.py  run_tests.py
.github/workflows/: ci.yml  deploy.yml  security-check.yml
docs/: DEPLOYMENT.md  GET_STARTED.md  RENDER_SETUP.md
examples/: example_config.csv
scripts/: check-secrets.py  check_aliases.py  clean_db.py  complete_final_task.py  export_regions_csv.py  export_skills_csv.py  final_regions_task.py  force_restart.py  migrate_to_supabase.py  ping_habr_api.py  restart_regions_only.py  run_autonomous_task.py  run_report.py  update_references.py  wait_and_check.py
sql queries/: 01_create_tables.sql  02_sample_queries.sql  03_initial_data.sql  companies last report.sql  complex report.sql  readable_report.sql  regions last report.sql  simple report specs.sql  simple_report.sql  skills last report.sql  specs last report.sql  summary_report.sql  top_salaries.sql
src/: __init__.py  async_api.py  async_scraper.py  cli.py  config_parser.py  core.py  database.py  scraper.py  settings.py  sqlite_storage.py
src/api/: app.py
tests/integration/: test_integration.py
tests/unit/: test_async_api.py  test_config_parser.py  test_core.py  test_database.py  test_error_coverage.py  test_scraper.py
